Related to #69. Improve and secure features in PersistenceHandler